# agent-scope-guard

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: proof-packet.json  sample.diff  scope.txt
src/agent_scope_guard/: __init__.py  cli.py
tests/: test_cli.py
